correcting responsive view

--- a/src/index.html
+++ b/src/index.html
@@ -6,62 +6,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <title>dulcecreación</title>
 </head>
 
 <body>
-    <header>
-        <a href="index.html"><img src="img/logo.png" class="logo" alt="logo_pokemon_go"></a>
-        <div class="responsive-menu">
-          <img src="img/menu-button.png" alt="" class="menu-open">
-        </div>
-        <div class="navigator-menu">
-          <span class="menu-close">✕</span>
-          <ul class="menu">
-            <li><a href="shop.html">TIENDA</a></li>
-            <li><a href="#">NOSOTROS</a></li>
-            <li><a href="#">CONTACTO</a></li>
-          </ul>
-        </div>
-        <div class="icons-actions-2">
-          <div class="bag">
-            <img src="img/carrito_compras.png" alt="">
-          </div>
-        </div>
-      </header>
+  <header>
+    <div class="responsive-menu">
+      <img src="img/menu-button.png" alt="" class="menu-open">
+    </div>
+    <a href="index.html"><img src="img/logo.png" class="logo" alt="logo_pokemon_go"></a>
+
+    <div class="navigator-menu">
+      <span class="menu-close">✕</span>
+      <ul class="menu">
+        <li><a href="shop.html">TIENDA</a></li>
+        <li><a href="#">NOSOTROS</a></li>
+        <li><a href="#">CONTACTO</a></li>
+      </ul>
+    </div>
+    <div class="icons-actions-2">
+      <div class="bag">
+        <img src="img/carrito_compras.png" alt="">
+      </div>
+    </div>
+  </header>
 
 
-  <section class="nuestrosp">
+  <section class="nuestrosp col-md-12 col-sm-12 col-xs-12">
     <div class="name-category">
       <a class="name-category" href="#">NUESTROS PRODUCTOS</a>
     </div>
+    <div class="row">
       <div class="col-md-3">
         <div class="item">
-          <img class="product" src="img/tortatematica.png" alt="">
-            <button class="type-button" type="button">TORTAS TEMÁTICAS</button>
+          <img class="product" src="img/imagenes-tienda/flamengo.png" alt="">
+          <button class="type-button" type="button">TORTAS TEMÁTICAS</button>
         </div>
       </div>
       <div class="col-md-3">
         <div class="item">
-          <img class="product" src="img/cupcakes.png" alt="">
-              <button class="type-button" type="button">CUPCAKES</button>
+          <img class="product" src="img/imagenes-tienda/flower-cupcake.png" alt="">
+          <button class="type-button" type="button">CUPCAKES</button>
         </div>
       </div>
       <div class="col-md-3">
         <div class="item">
-          <img class="product" src="img/buttercream.png" alt="">
-              <button class="type-button" type="button">TORTAS BUTTERCREAM</button>
+          <img class="product" src="img/imagenes-tienda/sirena.png" alt="">
+          <button class="type-button" type="button">TORTAS BUTTERCREAM</button>
         </div>
       </div>
       <div class="col-md-3">
         <div class="item">
-          <img class="product" src="img/nakedcake.png" alt="">
-              <button class="type-button" type="button">NAKED CAKE</button>
+          <img class="product" src="img/imagenes-tienda/boda.png" alt="">
+          <button class="type-button" type="button">NAKED CAKE</button>
         </div>
       </div>
+    </div>
   </section>
 
   <section class="recomendacion col-md-12 col-sm-12 col-xs-12">
@@ -77,19 +78,19 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="slide-item" src="img/recomendacion.jpg" alt="First slide">
-          <h3 class="slide-item">Carla</h3>
+          <h3 class="slide-name">Alessandra Sotomayor</h3>
           <h4 class="slide-item2">Excelente sabor y la decoración fue tal cual lo esperábamos. Recomiendo al 100%</h4>
         </div>
         <div class="carousel-item">
           <img class="slide-item" src="img/recomendacion2.jpg" alt="Second slide">
-          <h3 class="slide-item">Ana</h3>
+          <h3 class="slide-name">Kari Mendoza</h3>
           <h4 class="slide-item2">Me encanta! Son super atentos, y cumplidos. Y sobre todo muy rico todo lo que
             preparan.
           </h4>
         </div>
         <div class="carousel-item">
           <img class="slide-item" src="img/recomendacion3.png" alt="Third slide">
-          <h3 class="slide-item">Lucía</h3>
+          <h3 class="slide-name">Karo Esperanza</h3>
           <h4 class="slide-item2">La mejor opción para un día especial, delicioso y muy bello acabado, me encanta!
           </h4>
         </div>
@@ -106,7 +107,7 @@
   </section>
 
   <footer class="col-md-12 col-sm-12 col-xs-12">
-    <h4 class="footer-text">dulcecreación 2019 All Rights Reserved.</h4>
+    <h4>dulcecreación 2019 All Rights Reserved.</h4>
     <div class="icons-actions-2">
       <div class="icons">
         <img src="img/icon-facebook.png" alt="">
@@ -123,7 +124,6 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
