--- a/src/shop.html
+++ b/src/shop.html
@@ -3,21 +3,22 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>dulcecreación</title>
+  <link rel="shortcut icon" type="image/png" href="img/poke_icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="style.css">
-  <title>dulcecreación</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <header>
-    <a href="index.html"><img src="img/logo.png" class="logo" alt="logo_pokemon_go"></a>
     <div class="responsive-menu">
       <img src="img/menu-button.png" alt="" class="menu-open">
     </div>
+    <a href="index.html"><img src="img/logo.png" class="logo" alt="logo_pokemon_go"></a>
+
     <div class="navigator-menu">
       <span class="menu-close">✕</span>
       <ul class="menu">
@@ -33,69 +34,87 @@
     </div>
   </header>
 
-
-  <section class="nuestrosp">
-    <div class="name-category">
-      <a class="name-category" href="#">TIENDA</a>
-    </div>      
-    </div>
-      <div class="col-md-3 col-xs-6">
-        <div class="item">
-          <img class="product" src="img/imagenes-tienda/chic.png" alt="">
-          <div class="star-rating">
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
+  <div class="content container-fluid">
+    <section>
+      <div class="col-md-3 col-sm-4 col-xs-12">
+        <nav class="col-md-12">
+          <div class="navegador">
+            <div class="row">
+              <h3>TIENDA ONLINE</h4>
+            </div>
+            <div class="row">
+              <h4>ORDENAR:</h4>
+            </div>
+            <div class="row">
+              <select class="type-select" id="type-filter">
+                <option>Por popularidad</option>
+                <option>Precio mayor a menor</option>
+                <option>Precio menor a mayor</option>
+              </select>
+            </div>
           </div>
-          <h3 class="product-price">PRECIO: S/250</h3>
-          <button class="type-button" type="button">CHIC</button>
-        </div>
+        </nav>
       </div>
-      <div class="col-md-3 col-xs-6">
-        <div class="item">
-          <img class="product" src="img/imagenes-tienda/roses.jpg" alt="">
-          <div class="star-rating">
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
+    </section>
+    <section class="col-md-9 col-sm-8 col-xs-12">
+      <div class="row">
+        <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/chic.png" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price">PRECIO: S/250</h3>
+            <button class="type-button" type="button">CHIC</button>
           </div>
-          <h3 class="product-price">PRECIO: S/250</h3>
-          <button class="type-button" type="button">ROSES</button>
         </div>
-      </div>
-      <div class="col-md-3 col-xs-6">
-        <div class="item">
-          <img class="product" src="img/imagenes-tienda/flamengo.png" alt="">
-          <div class="star-rating">
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
+        <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/roses.jpg" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price">PRECIO: S/250</h3>
+            <button class="type-button" type="button">ROSES</button>
           </div>
-          <h3 class="product-price">PRECIO: S/250</h3>
-          <button class="type-button" type="button">FLAMINGO</button>
         </div>
-      </div>
-      <div class="col-md-3 col-xs-6">
-        <div class="item">
-          <img class="product" src="img/imagenes-tienda/unicorn.png" alt="">
-          <div class="star-rating">
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
+        <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/flamengo.png" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price">PRECIO: S/250</h3>
+            <button class="type-button" type="button">FLAMINGO</button>
           </div>
-          <h3 class="product-price">PRECIO: S/250</h3>
-          <button class="type-button" type="button">UNICORN</button>
         </div>
-      </div>
-      <div class="col-md-3 col-xs-6">
+        <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/unicorn.png" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price">PRECIO: S/250</h3>
+            <button class="type-button" type="button">UNICORN</button>
+          </div>
+        </div>
+        <div class="col-md-3 col-xs-6">
           <div class="item">
             <img class="product" src="img/imagenes-tienda/boda.png" alt="">
             <div class="star-rating">
@@ -108,109 +127,119 @@
             <h3 class="product-price">PRECIO: S/250</h3>
             <button class="type-button" type="button">BODA</button>
           </div>
-      </div>
-      <div class="col-md-3 col-xs-6">
-        <div class="item">
-          <img class="product" src="img/imagenes-tienda/sirena.png" alt="">
-          <div class="star-rating">
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/sirena.png" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price">PRECIO: S/250</h3>
+            <button class="type-button" type="button">SIRENA</button>
           </div>
-          <h3 class="product-price">PRECIO: S/250</h3>
-          <button class="type-button" type="button">SIRENA</button>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/summer-vibes.png" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price">PRECIO: S/250</h3>
+            <button class="type-button" type="button">SUMMER VIBES</button>
+          </div>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/bautizo.png" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price">PRECIO: S/250</h3>
+            <button class="type-button" type="button">BAUTIZO</button>
+          </div>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/sky-blue-cake.png" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price"> PRECIO: S/250</h3>
+            <button class="type-button" type="button">SKYBLUE CAKE</button>
+          </div>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/rose-and-gold.png" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price">PRECIO: S/250</h3>
+            <button class="type-button" type="button">ROSE AND GOLD</button>
+          </div>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/lovely-cucpcakes.png" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price">PRECIO: S/15.00</h3>
+            <button class="type-button" type="button">FLOWERS</button>
+          </div>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <div class="item">
+            <img class="product" src="img/imagenes-tienda/butterscotch-cupcakes.png" alt="">
+            <div class="star-rating">
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+              <a href="#">&#9733;</a>
+            </div>
+            <h3 class="product-price">PRECIO: S/15.00</h3>
+            <button class="type-button" type="button">BUTTERSCOTCH</button>
+          </div>
         </div>
       </div>
-      <div class="col-md-3 col-xs-6">
-        <div class="item">
-          <img class="product" src="img/imagenes-tienda/summer-vibes.png" alt="">
-          <div class="star-rating">
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-          </div>
-          <h3 class="product-price">PRECIO: S/250</h3>
-          <button class="type-button" type="button">SUMMER VIBES</button>
-        </div>
-      </div>
-      <div class="col-md-3 col-xs-6">
-        <div class="item">
-          <img class="product" src="img/imagenes-tienda/bautizo.png" alt="">
-          <div class="star-rating">
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-          </div>
-          <h3 class="product-price">PRECIO: S/250</h3>
-          <button class="type-button" type="button">BAUTIZO</button>
-        </div>
-      </div>
-      <div class="col-md-3 col-xs-6">
-        <div class="item">
-          <img class="product" src="img/imagenes-tienda/sky-blue-cake.png" alt="">
-          <div class="star-rating">
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-          </div>
-          <h3 class="product-price"> PRECIO: S/250</h3>
-          <button class="type-button" type="button">SKYBLUE CAKE</button>
-        </div>
-      </div>
-      <div class="col-md-3 col-xs-6">
-        <div class="item">
-          <img class="product" src="img/imagenes-tienda/rose-and-gold.png" alt="">
-          <div class="star-rating">
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-          </div>
-          <h3 class="product-price">PRECIO: S/250</h3>
-          <button class="type-button" type="button">ROSE AND GOLD</button>
-        </div>
-      </div>
-      <div class="col-md-3 col-xs-6">
-        <div class="item">
-          <img class="product" src="img/imagenes-tienda/lovely-cucpcakes.png" alt="">
-          <div class="star-rating">
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-          </div>
-          <h3 class="product-price">PRECIO: S/250</h3>
-          <button class="type-button" type="button">LOVELY CUPCAKES</button>
-        </div>
-      </div>
-      <div class="col-md-3 col-xs-6">
-        <div class="item">
-          <img class="product" src="img/imagenes-tienda/butterscotch-cupcakes.png" alt="">
-          <div class="star-rating">
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-            <a href="#">&#9733;</a>
-          </div>
-          <h3 class="product-price">PRECIO: S/250</h3>
-          <button class="type-button" type="button">BUTTERSCOTCH CUPCAKES</button>
-        </div>
-      </div>
-  </section>
+      <div class="next-page">
+        <button class="indicator" type="button">Siguiente <img src="img/icon-next.png" alt=""
+            class="icon-next"></button>
 
+      </div>
+
+
+
+  </div>
+  </section>
+  </div>
   <footer class="col-md-12 col-sm-12 col-xs-12">
-    <h4 class="footer-text">dulcecreación 2019 All Rights Reserved.</h4>
+    <h4>dulcecreación 2019 All Rights Reserved.</h4>
     <div class="icons-actions-2">
       <div class="icons">
         <img src="img/icon-facebook.png" alt="">
@@ -223,15 +252,14 @@
       </div>
     </div>
   </footer>
-
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   <script src="app.js"></script>
+
 </body>
 
 </html>
